--- a/blejtani.html
+++ b/blejtani.html
@@ -18,7 +18,7 @@
             </div>
             <div class="social-media">
                 <ul>
-                    <a href="ProjkektFinal.html" class="discover-btn">Home<span><i class="fa fa-arrow-right"></i></span></a>
+                    <a href="index.html" class="discover-btn">Home<span><i class="fa fa-arrow-right"></i></span></a>
                 </ul>
             </div>
     </div>
