--- a/blejtani.html
+++ b/blejtani.html
@@ -91,7 +91,7 @@
 </div>
 <footer>
     <div class="bottom">
-       <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p
+        <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p>
       </div>
 </footer>
 </section>
