--- a/bmw4blerje.html
+++ b/bmw4blerje.html
@@ -109,7 +109,7 @@
     </div>
     <footer>
         <div class="bottom">
-             <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p
+            <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p>
           </div>
     </footer>
     </section>
