--- a/bmw3blerje.html
+++ b/bmw3blerje.html
@@ -112,7 +112,7 @@
     </div>
     <footer>
         <div class="bottom">
-             <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p
+            <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p>
           </div>
     </footer>
     </section>
