--- a/bmw5blerje.html
+++ b/bmw5blerje.html
@@ -111,7 +111,7 @@
      </div>
      <footer>
         <div class="bottom">
-            <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p
+             <p>copyright &copy;2021 DIDI CORP. DESIGNED BY SEJDI LUBOVCI</p>
           </div>
     </footer>
      </section>
