--- a/Mapa.html
+++ b/Mapa.html
@@ -42,7 +42,7 @@
     </ul>
   </div>
   <div class="bottom">
-    <p>copyright &copy;2020 CENNI CORP. designed by Hysen Lubovci <span></span></p>
+    <p>copyright &copy;2020 DIDI CORP. designed by Sejdi Lubovci <span></span></p>
   </div>
 </footer>
 <div class="intro">
